Fix distorted provider logo

--- a/Resources/Private/Less/structure.less
+++ b/Resources/Private/Less/structure.less
@@ -180,6 +180,7 @@ a {
                     margin-top: 5px;
                     width: 70px;
                     height: 33px;
+                    object-fit: contain;
                 }
             }
             .mobile-meta {
@@ -321,6 +322,7 @@ a {
                     img {
                         width: 108px;
                         height: 50px;
+                        object-fit: contain;
                         border-radius: 4px;
                         object-fit: contain;
                     }
